refined templates and changed structures accordingly