@@ -1,7 +1,7 @@
 package org.jqassistant.contrib.asciidoctorj.processors.includes;
 
 import org.jqassistant.contrib.asciidoctorj.freemarker.TemplateRepo;
-import org.jqassistant.contrib.asciidoctorj.freemarker.templateroots.ResultRoot;
+import org.jqassistant.contrib.asciidoctorj.freemarker.templateroots.RuleRoot;
 import org.jqassistant.contrib.asciidoctorj.freemarker.templateroots.RulesRoot;
 import org.jqassistant.contrib.asciidoctorj.processors.attributes.ProcessAttributes;
 import org.jqassistant.contrib.asciidoctorj.reportrepo.ReportRepo;
@@ -13,7 +13,7 @@ import java.util.*;
 public class Rules extends AbstractIncludeProcessor<RulesRoot> {
 
     public Rules(ReportRepo repo, TemplateRepo templateRepo) {
-        super(repo, templateRepo, "Rules", Arrays.asList("RulesConcept", "RulesConstraint"));
+        super(repo, templateRepo, "Rules", List.of("RulesConcept", "RulesConstraint"));
     }
 
     @Override
@@ -22,12 +22,12 @@ public class Rules extends AbstractIncludeProcessor<RulesRoot> {
 
         for (Concept concept :
                 repo.findConcepts(attributes)) {
-            rootBuilder.conceptResult(ResultRoot.ruleToRuleRoot(concept));
+            rootBuilder.concept(RuleRoot.ruleToRuleRoot(concept));
         }
 
         for (Constraint constraint :
                 repo.findConstraints(attributes)) {
-            rootBuilder.constraintResult(ResultRoot.ruleToRuleRoot(constraint));
+            rootBuilder.constraint(RuleRoot.ruleToRuleRoot(constraint));
         }
 
         return rootBuilder.build();
